--- a/Vista/Index.resx
+++ b/Vista/Index.resx
@@ -133,7 +133,7 @@
         EqmbhYlwh0qtzTpa9ONHEARBEARdTKPxB79poKSUAUx5AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="menuICon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAGJJREFUaEPt1jENhAAQAMGr6d4AIkDLO0AEIqgRgRa0YAEu1HSEgmMmWQ8bAHDT
